fix clear and search buttons misaligning on invalid product input

--- a/client/src/styles.css
+++ b/client/src/styles.css
@@ -44,9 +44,8 @@
 }
 
 .clear-button {
-    display: flex;
-    justify-content: center;
     padding-left: 5px;
+    padding-top: 8px;
 }
 
 .stock-search {
